added folder structure

--- a/projects-page/projects.css
+++ b/projects-page/projects.css
@@ -25,6 +25,10 @@
     background-color: #C41230;
 }
 
+.filterBadge {
+    border: 2px solid #C41230;
+}
+
 #techImplementedButton {
     color: white;
     background-color: #C41230;
