--- a/tools/nav-bar/navStyles.css
+++ b/tools/nav-bar/navStyles.css
@@ -22,3 +22,18 @@
 .custom-toggler {
     border-color: white !important;
 }
+
+.footer{
+    background-color: #941120;
+    margin-top: 3%;
+}
+
+.footer p,a{
+    color: white;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.footer p {
+    font-size: 75%;
+}
