--- a/home-page/homepage.css
+++ b/home-page/homepage.css
@@ -15,10 +15,21 @@ ul{
     height: 33.25vw;
     display: flex;
     gap: 20px;
-  }
+}
   
   .top-section img {
     width: 100%;
     height: 100%;
     object-fit: cover;
-  }
+}
+
+.top-section h1 {
+    color: white;
+    position: absolute;
+    text-align: center;
+    top: 85%;
+    left: 50%;
+    transform: translate(-50%, -10%);
+    padding: 10px;
+
+}
