--- a/home-page/homepage.css
+++ b/home-page/homepage.css
@@ -3,7 +3,6 @@
     font-family: 'Open Sans', sans-serif !important;
     font-family: 'Roboto', sans-serif !important;
 }
-
 .main {
     margin-left: 5%;
     margin-right: 5%;
@@ -24,14 +23,32 @@ h4 {
     object-fit: cover;
 }
 
-.timeline {
-    width: 50vw;
+/*Video*/
+iframe {
     display: block;
     gap: 20px;
     margin-left: auto;
     margin-right: auto;
 }
-.timeline img {
+
+.timeline-grid {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: auto;
+    grid-template-areas: 
+      "fall spring"
+      "fall-graphic spring-graphic";
+  }
+
+/*Timeline graphics*/
+#timeline {
+    width: 40vw;
+    display: block;
+    gap: 20px;
+    margin-left: auto;
+    margin-right: auto;
+}
+#timeline img {
     width: 100%;
     height: 100%;
     object-fit: scale-down;
